syntax = "proto3";
package proto;
option go_package = "proto;moviepb";

service MovieService {
    rpc GetMovie (GetMovieReq) returns (GetMovieRes);
}

message MovieReq {
    string pagination = 1;
    string searchword = 2;
}

message MovieRes {
    string Title = 1;
    string Year = 2;
    string imdbID = 3;
    string Type = 4;
    string Poster = 5;
}

message GetMovieReq {
    MovieReq movie = 1;
}

message GetMovieRes {
    repeated MovieRes Search = 1;
    string totalResults = 2;
    string Response = 3;
}


